# semisweet

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  STYLEGUIDE.md  pyproject.toml  rust-toolchain.toml  semisweet.pyi
.claude/: capt-hook.toml  settings.json  ty-quiet.toml
.claude/fragments/.claude/capt-hook.toml/: layout.toml
.claude/fragments/.claude/settings.json/: layout.toml
.claude/fragments/.gitignore/: gitignore-local.fragment.gitignore  layout.toml
.claude/fragments/.pre-commit-config.yaml/: layout.toml
.claude/fragments/AGENTS.md/: layout.toml  semisweet-guide.fragment.md  semisweet-style.fragment.md
.claude/hooks/: packs.toml
.github/workflows/: ci.yml
.superset/: config.json
bench/: README.md  __init__.py  common.py  gen_dataset.py
benches/: concurrency.rs
docs/scripts/: demo.py  demo.sh
examples/: quickstart.py
python/semisweet/: __init__.py  core.pyi  decorator.py  objectcache.py  serde.py
src/: cache.rs  compression.rs  embedding.rs  entity.rs  error.rs  lib.rs  newtype.rs  object.rs  paths.rs  protocol.rs  python.rs  registry.rs  scoring.rs  vector.rs
src/backends/: embed_local.rs  embed_voyage.rs  entity_gliner.rs  entity_keyword.rs  mod.rs  object_disk.rs  object_s3.rs  vector_memory.rs  vector_turbopuffer.rs
src/client/: mod.rs  spawn.rs  stub.rs
src/daemon/: conn.rs  inference.rs  mod.rs  state.rs  supervisor.rs  writer.rs
tests/: conftest.py  daemon_lifecycle.rs  daemon_serving.rs  load_combos.rs  test_decorator.py  test_ergonomics.py  test_exceptions.py  test_object_cache.py  test_object_e2e.py  test_python_api.py  test_serde.py  test_stub_signatures.py
