[package]
name = "semisweet"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "An in-memory semantic cache backed by turbopuffer."
authors = ["Yasyf Mohamedali <yasyfm@gmail.com>"]
license = "PolyForm-Noncommercial-1.0.0"
readme = "README.md"
repository = "https://github.com/yasyf/semisweet"

[lib]
name = "semisweet"
# cdylib -> the loadable Python extension; rlib -> lets `cargo test` compile the
# crate as a normal Rust lib and run unit tests.
crate-type = ["cdylib", "rlib"]

[dependencies]
# No "extension-module" feature: it is deprecated as of pyo3 0.29. maturin
# (>= 1.9.4) sets PYO3_BUILD_EXTENSION_MODULE at wheel-build time, while a bare
# `cargo test`/`cargo clippy` links libpython and runs. The abi3-py39 floor is
# the single source of truth for cargo and maturin alike, mirrored by
# requires-python ">=3.9" in pyproject.toml.
pyo3 = { version = "0.29.0", features = ["abi3-py39"] }
