[build-system]
# >=1.9.4 is the minimum that auto-handles the (now-deprecated) extension-module
# linkage; the current latest, 1.14.0, resolves within this constraint.
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "semisweet"
description = "An async, in-memory semantic cache with pluggable backends."
readme = "README.md"
# Matches the abi3-py39 floor in Cargo.toml. No upper cap: a stable-ABI wheel is
# forward-compatible (runs on 3.9 through 3.14+).
requires-python = ">=3.9"
# PEP 639 SPDX expression string. "PolyForm-Noncommercial-1.0.0" is a valid SPDX
# identifier, so the string form (not the deprecated {text=...} table) is correct.
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Yasyf Mohamedali", email = "yasyfm@gmail.com" }]
# Version is sourced from Cargo.toml [package].version by maturin.
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/yasyf/semisweet"
Repository = "https://github.com/yasyf/semisweet"
Issues = "https://github.com/yasyf/semisweet/issues"

[tool.maturin]
# Import module == crate name == "semisweet" (pure-Rust, single top-level module).
module-name = "semisweet"
manifest-path = "Cargo.toml"
# No `features` key: extension-module is deprecated/auto-handled, and the abi3-py39
# floor is already a default feature in Cargo.toml (single source of truth).
# No `python-source`: pure-Rust layout has no Python package directory.
# No `include` key for type stubs: for a pure-Rust project maturin auto-ships the
# project-root `semisweet.pyi` plus the `py.typed` marker into the wheel root next
# to `semisweet.abi3.so` (PyO3 typing-hints guide / maturin project layout). PEP 561
# does not formally cover single-module distributions, but this root `.pyi` + root
# `py.typed` pair is the established convention type checkers honor for pyo3 modules.

# Test-only dependencies (PEP 735). `uv pip install --group test` pulls pytest into the
# venv after `maturin develop`; without this the `pytest` invocation is `command not
# found`. Kept out of [project] so the published wheel carries no test deps.
[dependency-groups]
test = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["needs_model: requires the local BGE model cached on disk"]
# The async get/set/delete roundtrip tests are plain `async def`; auto mode runs them
# under pytest-asyncio without a per-test marker.
asyncio_mode = "auto"
