[build-system]
# >=1.9.4 is the minimum that auto-handles the (now-deprecated) extension-module
# linkage; the current latest, 1.14.0, resolves within this constraint.
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "semisweet"
description = "An async, in-memory semantic cache with pluggable backends."
readme = "README.md"
# Matches the abi3-py39 floor in Cargo.toml. No upper cap: a stable-ABI wheel is
# forward-compatible (runs on 3.9 through 3.14+).
requires-python = ">=3.9"
# PEP 639 SPDX expression string. "PolyForm-Noncommercial-1.0.0" is a valid SPDX
# identifier, so the string form (not the deprecated {text=...} table) is correct.
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Yasyf Mohamedali", email = "yasyfm@gmail.com" }]
# Version is sourced from Cargo.toml [package].version by maturin.
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
# Pydantic is optional: the async object cache serializes BaseModel values as a portable,
# type-tagged JSON envelope when pydantic is importable, and falls back to pickle otherwise.
# The published wheel carries no required runtime dependencies.
pydantic = ["pydantic>=2"]

[project.urls]
Homepage = "https://github.com/yasyf/semisweet"
Repository = "https://github.com/yasyf/semisweet"
Issues = "https://github.com/yasyf/semisweet/issues"

[tool.maturin]
# Mixed Rust/Python layout: the pure-Python package lives in `python/semisweet/`, and the
# compiled extension ships as the `semisweet.core` submodule (`#[pymodule] fn core` emits
# `PyInit_core`). The package's hand-written `__init__.py` re-exports the raw API and layers
# the async object cache + `@cache` decorator on top.
module-name = "semisweet.core"
python-source = "python"
manifest-path = "Cargo.toml"
# No `features` key: extension-module is deprecated/auto-handled, and the abi3-py39 floor is
# already a default feature in Cargo.toml (single source of truth). The `python/semisweet/`
# tree ships its own `py.typed` marker and `core.pyi` (the extension's stub).

# Test-only dependencies (PEP 735). `uv pip install --group test` pulls them into the venv
# after `maturin develop`; kept out of [project] so the published wheel carries no test deps.
[dependency-groups]
test = ["pytest>=8", "pytest-asyncio>=0.24", "pydantic>=2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["needs_model: requires the local BGE model cached on disk"]
# The async get/set/delete roundtrip tests are plain `async def`; auto mode runs them
# under pytest-asyncio without a per-test marker.
asyncio_mode = "auto"
